--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -4,36 +4,66 @@
 # 3. key=distinct hash code + position + order
 # 4. value=localized string
 
-# bin/init_main.sh
-# 2723072=check_env
-CV1zmD=test 123                            # info@72@2
-CkcbDH=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 # exiterr@78@
-iJ7Y5=sudo 权限验证成功，后续命令自动使用 sudo            # success@81@
-Ba5uW3=当前用户没有足够的 sudo 权限，无法继续执行            # exiterr@83@
-CFI+GE=[1/2] 检查用户语言环境...                   # info@88@
-# 2669120=check_dvd
-GdNnR===== 系统升级开始 ==== # info@130@
-GdGfd===== 系统升级完成 ==== # success@135@
-# 2170112=handle_yum
-wRnqn=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... # info@383@
-CsZjIj=已更新 repo 文件                                # success@394@
-Bh2rZP=未检测到 CD-ROM 作为软件源，无需修改。                    # info@396@
+# 362709665=bin/i18n.sh
+#===load_lang_files
+CBlfKf=查找可用语言... #info@33@
+CZ8NA1=找到语言: $lang_name ($lang_file) #info@42@
+#===resolve_lang_files
+Azgqih=模式参数错误 {0} #string@70@
+Bh0G70={0} 语言文件已存在 #string@72@
+BZGS0v={0} 语言文件不存在 #string@75@
+#===add_lang_files
+CC39Sh=# {0} 语言包，文档结构：\n\ #string@134@
+BhqiSJ={0} 语言文件已创建 #info@144@
+#===do_del_lang_files
+BhsV54={0} 语言文件已删除 #string@160@
+#===del_lang_files
+DciPpK=确定要删除 {0} 语言文件吗? #string@172@
+CSSC4A=操作已取消，文件未删除 #string@173@
+#===get_lang_files
+DsK0EU=确定要新增 {0} 语言文件吗? #string@194@
+AhUfgx=请先添加语言文件 #exiterr@207@
+#===get_shell_files
+Dyyi9n=警告: 脚本文件 '{0}' 不存在 #warning@221@
+Dgt6EZ=没有找到任何 shell 脚本文件 #exiterr@231@
+#===upd_lang_files
+DTAUgm=开始更新语言文件 #info@255@
+DZ6eBX=语言文件更新完成 #info@276@
+#===i18n_main
+CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
 
-# bin/i18n.sh
-# 15755840=load_lang_files
-CBlfKf=查找可用语言... # info@33@
-BHjefS=找到语言: $lang_name ($lang_file) # info@42@
-# 2431552=resolve_lang_files
-CBlfKf=模式参数错误 {0}  # string@70@
-COmV6s={0} 语言文件已存在 # string@72@
-COVcGH={0} 语言文件不存在 # string@75@
-# 16239744=add_lang_files
-D+nLVA=# {0} 语言包，文档结构：\n\ # string@134@
-COmC3P={0} 语言文件已创建 # info@144@
-
-# bin/cmd_help.sh
-# 6928704=run_command
-Dmsi5q=未找到命令 '$cmd_name'      # exiterr@260@
-Cbamwt=未找到命令 '$cmd_name' 的元数据 # exiterr@263@
-
-# lib/hash_util.sh
+# 3525264606=bin/init_main.sh
+#===check_env
+CV1zmD=test 123 #info@72@2
+DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 #exiterr@78@
+CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo #success@81@
+DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行 #exiterr@83@
+B096mN=[1/2] 检查用户语言环境... #info@88@
+#===check_dvd
+CMQBXw===== 系统升级开始 ==== #info@130@
+BKRWUB===== 系统升级完成 ==== #success@135@
+#===config_sshd
+DdYPtu=sshd 未安装，正在安装... #info@170@
+A4g2Al=安装 sshd 失败 #exiterr@171@
+DM90xa=输入新的SSH端口 (当前: {0}) :  #string@176@
+DYcOAy=已设置SSH端口: {0} #info@179@
+CqfNuF=无效端口，保持默认: $curr_ssh_port #info@181@
+AQeuwP=已允许 root 登录 #info@187@
+A2SYM5=已禁止 root 登录 #info@188@
+CB81YF=SSH 配置已应用 #info@192@
+#===handle_apt
+DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源... #info@366@
+ACdFN5=已更新 sources.list #success@374@
+CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
+#===handle_yum
+Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... #info@383@
+A5NqLZ=已更新 repo 文件 #success@394@
+CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
+#===handle_pacman
+Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源... #info@403@
+DSD+_u=已更新 pacman.conf #success@414@
+CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
+#===handle_zypper
+BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
+A5NqLZ=已更新 repo 文件 #success@434@
+CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
