--- a/config/lang/zh_CN.properties
+++ b/config/lang/zh_CN.properties
@@ -1,24 +1,8 @@
-# zh 语言包，文档结构：
-# 1. 自动处理 bin | lib 目录 py 文件
+# zh_CN 语言包，文档结构：
+# 1. 自动处理 bin | lib 目录 sh 文件
 # 2. 解析函数 string | info | exiterr | error | success | warning
 # 3. key=distinct hash code + position + order
 # 4. value=localized string
-
-# 56750496=bin/arc/init_arch.sh
-
-# 1288433313=bin/cmd_help.sh
-#===show_help_info
-CLSNEc=Usage: show_help_info [command]\n \ #exiterr@215@
-AYmVTH=Error: Command '$cmd' not found. #exiterr@220@
-#===run_command
-AD2VnV=未找到命令 '$cmd_name' #exiterr@260@
-BUhmCh=未找到命令 '$cmd_name' 的元数据 #exiterr@263@
-
-# 1130444324=bin/cos/init_centos.sh
-
-# 1407086785=bin/deb/init_debian.sh
-#===calc_fast_mirrors
-C_dXMo=正在测试最快 {0} 镜像... #info@59@
 
 # 362709665=bin/i18n.sh
 #===load_lang_files
@@ -47,14 +31,6 @@ DTAUgm=开始更新语言文件 #info@255@
 DZ6eBX=语言文件更新完成 #info@276@
 #===i18n_main
 CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
-
-# 310052828=bin/init_base_func.sh
-#===select_mirror
-ACDhWH=错误：镜像列表文件不存在 #exiterr@31@
-CBS3sb=错误：未找到有效镜像URL #exiterr@47@
-D77gSF=可用的镜像站： #success@50@
-APYiDP=请选择镜像编号 [{0}]:  #string@54@
-AT+5vC=输入{0}错误!{1} #string@62@
 
 # 3525264606=bin/init_main.sh
 #===check_env
@@ -91,55 +67,3 @@ CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
 A5NqLZ=已更新 repo 文件 #success@434@
 CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
-
-# 1181381341=bin/rhl/init_RHEL.sh
-
-# 4213391458=bin/suse/init_OpenSUSE.sh
-
-# 1625566433=bin/ubt/init_ubuntu.sh
-
-# 499730681=lib/ast_parser.sh
-#===main
-C5kacU=用法: $0 <shell脚本或目录> #exiterr@298@
-DX5jXO='$dir' 不是有效的文件或目录 #error@310@
-
-# 4291987827=lib/bash_utils.sh
-#===confirm_action
-D69r+j=操作已取消 #string@42@
-#===file_backup_sj
-Cnrx1A=未指定需要备份的文件 #exiterr@182@
-CxzDe0=警告：未找到匹配 '$pattern' 的文件 #warning@193@
-CcmxLB=备份文件 $backup_file 已存在，跳过 #warning@205@
-AqMBPA=已创建备份: $src_file -> $backup_file #info@212@
-BgTRIj=错误：无法创建备份文件 $backup_file #error@215@
-DwtINR=重要文件无法备份 #exiterr@223@
-AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个 #info@225@
-
-# 4035570135=lib/cmd_handler.sh
-#===install_base_pkg
-DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}] #exiterr@37@
-AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}] #success@39@
-#===clean_pkg_mgr
-CL3mF5=清理 {0} 缓存... #info@48@
-DeScsX=清理缓存失败 #exiterr@56@
-#===update_pkg_mgr
-DEw7FX=更新镜像源列表... #info@63@
-DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
-#===upgrade_pkg_mgr
-ATrBo6=升级软件包失败 #exiterr@84@
-#===remove_pkg_mgr
-Ct4Xe+=删除依赖包失败 #exiterr@98@
-
-# 727462249=lib/debug_tool.sh
-
-# 959146949=lib/hash_util.sh
-
-# 1101551806=lib/json_handler.sh
-#===fetch_options
-BzOdCD=JSON format error #exiterr@42@
-
-# 2733812138=lib/msg_handler.sh
-
-# 360797750=lib/python_bridge.sh
-
-# 2828509190=lib/system.sh
