--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -1,56 +1,68 @@
 # en 语言包，文档结构：
-# 1. 自动处理 bin | lib 目录 sh 文件
+# 1. 自动处理 bin | lib 目录 py 文件
 # 2. 解析函数 string | info | exiterr | error | success | warning
 # 3. key=distinct hash code + position + order
 # 4. value=localized string
 
-# 1288433313=bin/cmd_help.sh
-#===show_help_info
+# ■=bin/cmd_help.sh
+# ◆=show_help_info
 CLSNEc=Usage: show_help_info [command]\n \ #exiterr@215@
 AYmVTH=Error: Command '$cmd' not found. #exiterr@220@
-#===run_command
+# ◆=run_command
 AD2VnV=未找到命令 '$cmd_name' #exiterr@260@
 BUhmCh=未找到命令 '$cmd_name' 的元数据 #exiterr@263@
 
-# 362709665=bin/i18n.sh
-#===load_lang_files
+# ■=bin/deb/init_debian.sh
+# ◆=calc_fast_mirrors
+C_dXMo=正在测试最快 {0} 镜像... #info@59@
+
+# ■=bin/i18n.sh
+# ◆=load_lang_files
 CBlfKf=查找可用语言... #info@33@
 CZ8NA1=找到语言: $lang_name ($lang_file) #info@42@
-#===resolve_lang_files
+# ◆=resolve_lang_files
 Azgqih=模式参数错误 {0} #string@70@
 Bh0G70={0} 语言文件已存在 #string@72@
 BZGS0v={0} 语言文件不存在 #string@75@
-#===add_lang_files
+# ◆=add_lang_files
 CC39Sh=# {0} 语言包，文档结构：\n\ #string@134@
 BhqiSJ={0} 语言文件已创建 #info@144@
-#===do_del_lang_files
+# ◆=do_del_lang_files
 BhsV54={0} 语言文件已删除 #string@160@
-#===del_lang_files
+# ◆=del_lang_files
 DciPpK=确定要删除 {0} 语言文件吗? #string@172@
 CSSC4A=操作已取消，文件未删除 #string@173@
-#===get_lang_files
+# ◆=get_lang_files
 DsK0EU=确定要新增 {0} 语言文件吗? #string@194@
 AhUfgx=请先添加语言文件 #exiterr@207@
-#===get_shell_files
+# ◆=get_shell_files
 Dyyi9n=警告: 脚本文件 '{0}' 不存在 #warning@221@
 Dgt6EZ=没有找到任何 shell 脚本文件 #exiterr@231@
-#===upd_lang_files
+# ◆=upd_lang_files
 DTAUgm=开始更新语言文件 #info@255@
 DZ6eBX=语言文件更新完成 #info@276@
-#===i18n_main
+# ◆=i18n_main
 CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
 
-# 3525264606=bin/init_main.sh
-#===check_env
+# ■=bin/init_base_func.sh
+# ◆=select_mirror
+ACDhWH=错误：镜像列表文件不存在 #exiterr@31@
+CBS3sb=错误：未找到有效镜像URL #exiterr@47@
+D77gSF=可用的镜像站： #success@50@
+APYiDP=请选择镜像编号 [{0}]:  #string@54@
+AT+5vC=输入{0}错误!{1} #string@62@
+
+# ■=bin/init_main.sh
+# ◆=check_env
 CV1zmD=test 123 #info@72@2
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 #exiterr@78@
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo #success@81@
 DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行 #exiterr@83@
 B096mN=[1/2] 检查用户语言环境... #info@88@
-#===check_dvd
+# ◆=check_dvd
 CMQBXw===== 系统升级开始 ==== #info@130@
 BKRWUB===== 系统升级完成 ==== #success@135@
-#===config_sshd
+# ◆=config_sshd
 DdYPtu=sshd 未安装，正在安装... #info@170@
 A4g2Al=安装 sshd 失败 #exiterr@171@
 DM90xa=输入新的SSH端口 (当前: {0}) :  #string@176@
@@ -59,95 +71,32 @@ CqfNuF=无效端口，保持默认: $curr_ssh_port #info@181@
 AQeuwP=已允许 root 登录 #info@187@
 A2SYM5=已禁止 root 登录 #info@188@
 CB81YF=SSH 配置已应用 #info@192@
-#===handle_apt
+# ◆=handle_apt
 DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源... #info@366@
 ACdFN5=已更新 sources.list #success@374@
 CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
-#===handle_yum
+# ◆=handle_yum
 Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... #info@383@
 A5NqLZ=已更新 repo 文件 #success@394@
 CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
-#===handle_pacman
+# ◆=handle_pacman
 Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源... #info@403@
 DSD+_u=已更新 pacman.conf #success@414@
 CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
-#===handle_zypper
+# ◆=handle_zypper
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
 A5NqLZ=已更新 repo 文件 #success@434@
 CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
 
-# 310052828=bin/init_base_func.sh
-#===select_mirror
-ACDhWH=错误：镜像列表文件不存在 #exiterr@31@
-CBS3sb=错误：未找到有效镜像URL #exiterr@47@
-D77gSF=可用的镜像站： #success@50@
-APYiDP=请选择镜像编号 [{0}]:  #string@54@
-AT+5vC=输入{0}错误!{1} #string@62@
-
-# 4213391458=bin/suse/init_OpenSUSE.sh
-#===init_sources_list
-ALh1Jc=$1 #info@26@
-
-# 1625566433=bin/ubt/init_ubuntu.sh
-#===init_sources_list
-ALh1Jc=$1 #info@40@
-
-# 1130444324=bin/cos/init_centos.sh
-#===init_sources_list
-ALh1Jc=$1 #info@25@
-
-# 1407086785=bin/deb/init_debian.sh
-#===init_sources_list
-ALh1Jc=$1 #info@38@
-#===calc_fast_mirrors
-C_dXMo=正在测试最快 {0} 镜像... #info@59@
-
-# 56750496=bin/arc/init_arch.sh
-#===init_sources_list
-ALh1Jc=$1 #info@26@
-
-# 1181381341=bin/rhl/init_RHEL.sh
-#===init_sources_list
-ALh1Jc=$1 #info@25@
-
-# 2828509190=lib/system.sh
-
-# 2733812138=lib/msg_handler.sh
-
-# 727462249=lib/debug_tool.sh
-
-# 499730681=lib/ast_parser.sh
-#===main
+# ■=lib/ast_parser.sh
+# ◆=main
 C5kacU=用法: $0 <shell脚本或目录> #exiterr@298@
 DX5jXO='$dir' 不是有效的文件或目录 #error@310@
 
-# 4035570135=lib/cmd_handler.sh
-#===install_base_pkg
-DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}] #exiterr@37@
-AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}] #success@39@
-#===clean_pkg_mgr
-CL3mF5=清理 {0} 缓存... #info@48@
-DeScsX=清理缓存失败 #exiterr@56@
-#===update_pkg_mgr
-DEw7FX=更新镜像源列表... #info@63@
-DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
-#===upgrade_pkg_mgr
-ATrBo6=升级软件包失败 #exiterr@84@
-#===remove_pkg_mgr
-Ct4Xe+=删除依赖包失败 #exiterr@98@
-
-# 1101551806=lib/json_handler.sh
-#===fetch_options
-BzOdCD=JSON format error #exiterr@42@
-
-# 959146949=lib/hash_util.sh
-
-# 360797750=lib/python_bridge.sh
-
-# 4291987827=lib/bash_utils.sh
-#===confirm_action
+# ■=lib/bash_utils.sh
+# ◆=confirm_action
 D69r+j=操作已取消 #string@42@
-#===file_backup_sj
+# ◆=file_backup_sj
 Cnrx1A=未指定需要备份的文件 #exiterr@182@
 CxzDe0=警告：未找到匹配 '$pattern' 的文件 #warning@193@
 CcmxLB=备份文件 $backup_file 已存在，跳过 #warning@205@
@@ -155,3 +104,22 @@ AqMBPA=已创建备份: $src_file -> $backup_file #info@212@
 BgTRIj=错误：无法创建备份文件 $backup_file #error@215@
 DwtINR=重要文件无法备份 #exiterr@223@
 AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个 #info@225@
+
+# ■=lib/cmd_handler.sh
+# ◆=install_base_pkg
+DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}] #exiterr@37@
+AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}] #success@39@
+# ◆=clean_pkg_mgr
+CL3mF5=清理 {0} 缓存... #info@48@
+DeScsX=清理缓存失败 #exiterr@56@
+# ◆=update_pkg_mgr
+DEw7FX=更新镜像源列表... #info@63@
+DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
+# ◆=upgrade_pkg_mgr
+ATrBo6=升级软件包失败 #exiterr@84@
+# ◆=remove_pkg_mgr
+Ct4Xe+=删除依赖包失败 #exiterr@98@
+
+# ■=lib/json_handler.sh
+# ◆=fetch_options
+BzOdCD=JSON format error #exiterr@42@
