update_lang_properties代码重构

--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,9 +9,10 @@
 config:
   project: zoomIT-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-05-09 00:28:42'
+  changed: '2025-05-09 15:43:25'
   djb2_len: 20
-  del_mode: 1 # 0=保留；1=注释；2=删除
+  del_mode: 2 # 0=保留；1=注释；2=删除
+  trim_space: true # 消息前后禁止空格
   lazy_load: false
   # add relative path here
   path_incl:
@@ -32,7 +33,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 4, start: 8, end: 14}
       en: {count: 4, start: 8, end: 14}
@@ -40,7 +41,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 1, start: 16, end: 18}
       en: {count: 1, start: 16, end: 18}
@@ -48,7 +49,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 20, end: 46}
       en: {count: 17, start: 20, end: 46}
@@ -56,7 +57,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 5, start: 48, end: 54}
       en: {count: 5, start: 48, end: 54}
@@ -64,7 +65,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 27, start: 56, end: 90}
       en: {count: 27, start: 56, end: 90}
@@ -72,7 +73,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 2, start: 92, end: 95}
       en: {count: 2, start: 92, end: 95}
@@ -80,7 +81,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 8, start: 97, end: 107}
       en: {count: 8, start: 97, end: 107}
@@ -88,7 +89,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 8, start: 109, end: 122}
       en: {count: 8, start: 109, end: 122}
@@ -96,7 +97,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-09 00:28:42'
+    changed: '2025-05-09 15:43:25'
     stats:
       zh: {count: 1, start: 124, end: 126}
       en: {count: 1, start: 124, end: 126}
