--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -9,48 +9,52 @@
 CLSNEc=Usage: show_help_info [command]\n \ #exiterr@215@
 AYmVTH=Error: Command '$cmd' not found. #exiterr@220@
 # ◆=run_command
-AD2VnV=未找到命令 '$cmd_name' #exiterr@260@
-BUhmCh=未找到命令 '$cmd_name' 的元数据 #exiterr@263@
+AD2VnV=Command '$cmd_name' not fuond #exiterr@260@
+BUhmCh=Metadata for command '$cmd_name' not found #exiterr@263@
 
 # ■=bin/deb/init_debian.sh
 # ◆=calc_fast_mirrors
-C_dXMo=正在测试最快 {0} 镜像... #info@59@
+C_dXMo=Testing fastest {0} mirror... #info@59@
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-CBlfKf=查找可用语言... #info@33@
-CZ8NA1=找到语言: $lang_name ($lang_file) #info@42@
+CBlfKf=Searching available languages... #info@33@
+CZ8NA1=Found language: $lang_name ($lang_file) #info@42@
 # ◆=resolve_lang_files
-Azgqih=模式参数错误 {0} #string@70@
-Bh0G70={0} 语言文件已存在 #string@72@
-BZGS0v={0} 语言文件不存在 #string@75@
+Azgqih=Invalid mode parameter {0} #string@70@
+Bh0G70={0} language file already exists #string@72@
+BZGS0v={0} language file does not exist #string@75@
 # ◆=add_lang_files
-CC39Sh=# {0} 语言包，文档结构：\n\ #string@134@
-BhqiSJ={0} 语言文件已创建 #info@144@
+CC39Sh=# {0} language pack, document structure: \n\ #string@134@
+# 1. 自动处理 bin | lib 目录 sh 文件\n\
+# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 3. key=distinct hash code + position + order\n\
+# 4. value=localized string" "${lang_code}")"
+BhqiSJ={0} language file created #info@144@
 # ◆=do_del_lang_files
-BhsV54={0} 语言文件已删除 #string@160@
+BhsV54={0} language file deleted #string@160@
 # ◆=del_lang_files
-DciPpK=确定要删除 {0} 语言文件吗? #string@172@
-CSSC4A=操作已取消，文件未删除 #string@173@
+DciPpK=Confirm delete {0} language file? #string@172@
+CSSC4A=Operation cancelled, file not deleted #string@173@
 # ◆=get_lang_files
-DsK0EU=确定要新增 {0} 语言文件吗? #string@194@
-AhUfgx=请先添加语言文件 #exiterr@207@
+DsK0EU=Confirm add {0} language file? #string@194@
+AhUfgx=Please add language file first #exiterr@207@
 # ◆=get_shell_files
-Dyyi9n=警告: 脚本文件 '{0}' 不存在 #warning@221@
-Dgt6EZ=没有找到任何 shell 脚本文件 #exiterr@231@
+Dyyi9n=Warning: Script file '{0}' does not exist #warning@221@
+Dgt6EZ=No shell script files found #exiterr@231@
 # ◆=upd_lang_files
-DTAUgm=开始更新语言文件 #info@255@
-DZ6eBX=语言文件更新完成 #info@276@
+DTAUgm=Starting language file update #info@255@
+DZ6eBX=Language file update complete #info@276@
 # ◆=i18n_main
-CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
+CpRbj2=Enter language parameter, e.g. --lang={0} #exiterr@401@
 
 # ■=bin/init_base_func.sh
 # ◆=select_mirror
-ACDhWH=错误：镜像列表文件不存在 #exiterr@31@
-CBS3sb=错误：未找到有效镜像URL #exiterr@47@
-D77gSF=可用的镜像站： #success@50@
-APYiDP=请选择镜像编号 [{0}]:  #string@54@
-AT+5vC=输入{0}错误!{1} #string@62@
+ACDhWH=Error: Mirror list file does not exist #exiterr@31@
+CBS3sb=Error: No valid mirror URL found #exiterr@47@
+D77gSF=Available mirrors: #success@50@
+APYiDP=Select mirror number [{0}]: #string@54@
+AT-5vC=输入{0}错误!{1} #string@62@
 
 # ■=bin/init_main.sh
 # ◆=check_env
@@ -65,7 +69,7 @@ BKRWUB===== 系统升级完成 ==== #success@135@
 # ◆=config_sshd
 DdYPtu=sshd 未安装，正在安装... #info@170@
 A4g2Al=安装 sshd 失败 #exiterr@171@
-DM90xa=输入新的SSH端口 (当前: {0}) :  #string@176@
+DM90xa=输入新的SSH端口 (当前: {0}) : #string@176@
 DYcOAy=已设置SSH端口: {0} #info@179@
 CqfNuF=无效端口，保持默认: $curr_ssh_port #info@181@
 AQeuwP=已允许 root 登录 #info@187@
@@ -74,19 +78,19 @@ CB81YF=SSH 配置已应用 #info@192@
 # ◆=handle_apt
 DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源... #info@366@
 ACdFN5=已更新 sources.list #success@374@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
 # ◆=handle_yum
 Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... #info@383@
 A5NqLZ=已更新 repo 文件 #success@394@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
 # ◆=handle_pacman
 Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源... #info@403@
-DSD+_u=已更新 pacman.conf #success@414@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
+DSD-_u=已更新 pacman.conf #success@414@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
 # ◆=handle_zypper
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
 A5NqLZ=已更新 repo 文件 #success@434@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
 
 # ■=lib/ast_parser.sh
 # ◆=main
@@ -95,7 +99,7 @@ DX5jXO='$dir' 不是有效的文件或目录 #error@310@
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
-D69r+j=操作已取消 #string@42@
+D69r-j=操作已取消 #string@42@
 # ◆=file_backup_sj
 Cnrx1A=未指定需要备份的文件 #exiterr@182@
 CxzDe0=警告：未找到匹配 '$pattern' 的文件 #warning@193@
@@ -118,7 +122,7 @@ DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
 # ◆=upgrade_pkg_mgr
 ATrBo6=升级软件包失败 #exiterr@84@
 # ◆=remove_pkg_mgr
-Ct4Xe+=删除依赖包失败 #exiterr@98@
+Ct4Xe-=删除依赖包失败 #exiterr@98@
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
