--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -49,8 +49,8 @@ CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
 ACDhWH=错误：镜像列表文件不存在 #exiterr@31@
 CBS3sb=错误：未找到有效镜像URL #exiterr@47@
 D77gSF=可用的镜像站： #success@50@
-APYiDP=请选择镜像编号 [{0}]:  #string@54@
-AT+5vC=输入{0}错误!{1} #string@62@
+APYiDP=请选择镜像编号 [{0}]: #string@54@
+AT-5vC=输入{0}错误!{1} #string@62@
 
 # ■=bin/init_main.sh
 # ◆=check_env
@@ -65,7 +65,7 @@ BKRWUB===== 系统升级完成 ==== #success@135@
 # ◆=config_sshd
 DdYPtu=sshd 未安装，正在安装... #info@170@
 A4g2Al=安装 sshd 失败 #exiterr@171@
-DM90xa=输入新的SSH端口 (当前: {0}) :  #string@176@
+DM90xa=输入新的SSH端口 (当前: {0}) : #string@176@
 DYcOAy=已设置SSH端口: {0} #info@179@
 CqfNuF=无效端口，保持默认: $curr_ssh_port #info@181@
 AQeuwP=已允许 root 登录 #info@187@
@@ -74,19 +74,19 @@ CB81YF=SSH 配置已应用 #info@192@
 # ◆=handle_apt
 DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源... #info@366@
 ACdFN5=已更新 sources.list #success@374@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
 # ◆=handle_yum
 Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... #info@383@
 A5NqLZ=已更新 repo 文件 #success@394@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
 # ◆=handle_pacman
 Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源... #info@403@
-DSD+_u=已更新 pacman.conf #success@414@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
+DSD-_u=已更新 pacman.conf #success@414@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
 # ◆=handle_zypper
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
 A5NqLZ=已更新 repo 文件 #success@434@
-CBvp+a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
 
 # ■=lib/ast_parser.sh
 # ◆=main
@@ -95,7 +95,7 @@ DX5jXO='$dir' 不是有效的文件或目录 #error@310@
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
-D69r+j=操作已取消 #string@42@
+D69r-j=操作已取消 #string@42@
 # ◆=file_backup_sj
 Cnrx1A=未指定需要备份的文件 #exiterr@182@
 CxzDe0=警告：未找到匹配 '$pattern' 的文件 #warning@193@
@@ -118,7 +118,7 @@ DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
 # ◆=upgrade_pkg_mgr
 ATrBo6=升级软件包失败 #exiterr@84@
 # ◆=remove_pkg_mgr
-Ct4Xe+=删除依赖包失败 #exiterr@98@
+Ct4Xe-=删除依赖包失败 #exiterr@98@
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
