--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -6,7 +6,8 @@
 
 # ■=bin/cmd_help.sh
 # ◆=show_help_info
-CLSNEc=Usage: show_help_info [command]\n \ #exiterr@215@
+AQjaMp=Usage: show_help_info [command]\n \
+        Available commands: find, ls #exiterr@215@2
 AYmVTH=Error: Command '$cmd' not found. #exiterr@220@
 # ◆=run_command
 AD2VnV=Command '$cmd_name' not fuond #exiterr@260@
@@ -25,11 +26,11 @@ Azgqih=Invalid mode parameter {0} #string@70@
 Bh0G70={0} language file already exists #string@72@
 BZGS0v={0} language file does not exist #string@75@
 # ◆=add_lang_files
-CC39Sh=# {0} language pack, document structure: \n\ #string@134@
+BXt0NX=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
 # 2. 解析函数 string | info | exiterr | error | success | warning\n\
 # 3. key=distinct hash code + position + order\n\
-# 4. value=localized string" "${lang_code}")"
+# 4. value=localized string #string@134@5
 BhqiSJ={0} language file created #info@144@
 # ◆=do_del_lang_files
 BhsV54={0} language file deleted #string@160@
@@ -58,7 +59,7 @@ AT-5vC=输入{0}错误!{1} #string@62@
 
 # ■=bin/init_main.sh
 # ◆=check_env
-CV1zmD=test 123 #info@72@2
+CV1zmD=test 123 #info@72@
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 #exiterr@78@
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo #success@81@
 DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行 #exiterr@83@
