--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -6,125 +6,125 @@
 
 # ■=bin/cmd_help.sh
 # ◆=show_help_info
-AQjaMp=Usage: show_help_info [command]\n \
-        Available commands: find, ls #exiterr@215@2
-AYmVTH=Error: Command '$cmd' not found. #exiterr@220@
+AQjaMs=Usage: show_help_info [command]\n \
+        Available commands: find, ls   
+AYmVTH=Error: Command '$cmd' not found.
 # ◆=run_command
-AD2VnV=Command '$cmd_name' not fuond #exiterr@260@
-BUhmCh=Metadata for command '$cmd_name' not found #exiterr@263@
+AD2VnV=Command '$cmd_name' not fuond
+BUhmCh=Metadata for command '$cmd_name' not found
 
 # ■=bin/deb/init_debian.sh
 # ◆=calc_fast_mirrors
-C_dXMo=Testing fastest {0} mirror... #info@59@
+C_dXMo=Testing fastest {0} mirror...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-CBlfKf=Searching available languages... #info@33@
-CZ8NA1=Found language: $lang_name ($lang_file) #info@42@
+CBlfKf=Searching available languages...
+CZ8NA1=Found language: $lang_name ($lang_file)
 # ◆=resolve_lang_files
-Azgqih=Invalid mode parameter {0} #string@70@
-Bh0G70={0} language file already exists #string@72@
-BZGS0v={0} language file does not exist #string@75@
+Azgqih=Invalid mode parameter {0}
+Bh0G70={0} language file already exists
+BZGS0v={0} language file does not exist
 # ◆=add_lang_files
 BXt0NX=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
 # 2. 解析函数 string | info | exiterr | error | success | warning\n\
 # 3. key=distinct hash code + position + order\n\
-# 4. value=localized string #string@134@5
-BhqiSJ={0} language file created #info@144@
+# 4. value=localized string
+BhqiSJ={0} language file created
 # ◆=do_del_lang_files
-BhsV54={0} language file deleted #string@160@
+BhsV54={0} language file deleted
 # ◆=del_lang_files
-DciPpK=Confirm delete {0} language file? #string@172@
-CSSC4A=Operation cancelled, file not deleted #string@173@
+DciPpK=Confirm delete {0} language file?
+CSSC4A=Operation cancelled, file not deleted
 # ◆=get_lang_files
-DsK0EU=Confirm add {0} language file? #string@194@
-AhUfgx=Please add language file first #exiterr@207@
+DsK0EU=Confirm add {0} language file?
+AhUfgx=Please add language file first
 # ◆=get_shell_files
-Dyyi9n=Warning: Script file '{0}' does not exist #warning@221@
-Dgt6EZ=No shell script files found #exiterr@231@
+Dyyi9n=Warning: Script file '{0}' does not exist
+Dgt6EZ=No shell script files found
 # ◆=upd_lang_files
-DTAUgm=Starting language file update #info@255@
-DZ6eBX=Language file update complete #info@276@
+DTAUgm=Starting language file update
+DZ6eBX=Language file update complete
 # ◆=i18n_main
-CpRbj2=Enter language parameter, e.g. --lang={0} #exiterr@401@
+CpRbj2=Enter language parameter, e.g. --lang={0}
 
 # ■=bin/init_base_func.sh
 # ◆=select_mirror
-ACDhWH=Error: Mirror list file does not exist #exiterr@31@
-CBS3sb=Error: No valid mirror URL found #exiterr@47@
-D77gSF=Available mirrors: #success@50@
-APYiDP=Select mirror number [{0}]: #string@54@
-AT-5vC=输入{0}错误!{1} #string@62@
+ACDhWH=Error: Mirror list file does not exist
+CBS3sb=Error: No valid mirror URL found
+D77gSF=Available mirrors:
+APYiDP=请选择镜像编号 [{0}]: 
+AT-5vC=输入{0}错误!{1}
 
 # ■=bin/init_main.sh
 # ◆=check_env
-CV1zmD=test 123 #info@72@
-DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 #exiterr@78@
-CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo #success@81@
-DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行 #exiterr@83@
-B096mN=[1/2] 检查用户语言环境... #info@88@
+CV1zmD=test 123
+DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
+CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
+DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
+B096mN=[1/2] 检查用户语言环境...
 # ◆=check_dvd
-CMQBXw===== 系统升级开始 ==== #info@130@
-BKRWUB===== 系统升级完成 ==== #success@135@
+CMQBXw===== 系统升级开始 ====
+BKRWUB===== 系统升级完成 ====
 # ◆=config_sshd
-DdYPtu=sshd 未安装，正在安装... #info@170@
-A4g2Al=安装 sshd 失败 #exiterr@171@
-DM90xa=输入新的SSH端口 (当前: {0}) : #string@176@
-DYcOAy=已设置SSH端口: {0} #info@179@
-CqfNuF=无效端口，保持默认: $curr_ssh_port #info@181@
-AQeuwP=已允许 root 登录 #info@187@
-A2SYM5=已禁止 root 登录 #info@188@
-CB81YF=SSH 配置已应用 #info@192@
+DdYPtu=sshd 未安装，正在安装...
+A4g2Al=安装 sshd 失败
+DM90xa=输入新的SSH端口 (当前: {0}) : 
+DYcOAy=已设置SSH端口: {0}
+CqfNuF=无效端口，保持默认: $curr_ssh_port
+AQeuwP=已允许 root 登录
+A2SYM5=已禁止 root 登录
+CB81YF=SSH 配置已应用
 # ◆=handle_apt
-DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源... #info@366@
-ACdFN5=已更新 sources.list #success@374@
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@376@
+DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
+ACdFN5=已更新 sources.list
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
 # ◆=handle_yum
-Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源... #info@383@
-A5NqLZ=已更新 repo 文件 #success@394@
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@396@
+Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源...
+A5NqLZ=已更新 repo 文件
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
 # ◆=handle_pacman
-Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源... #info@403@
-DSD-_u=已更新 pacman.conf #success@414@
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@416@
+Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源...
+DSD-_u=已更新 pacman.conf
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
 # ◆=handle_zypper
-BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源... #info@423@
-A5NqLZ=已更新 repo 文件 #success@434@
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。 #info@436@
+BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
+A5NqLZ=已更新 repo 文件
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
 
 # ■=lib/ast_parser.sh
 # ◆=main
-C5kacU=用法: $0 <shell脚本或目录> #exiterr@298@
-DX5jXO='$dir' 不是有效的文件或目录 #error@310@
+C5kacU=用法: $0 <shell脚本或目录>
+DX5jXO='$dir' 不是有效的文件或目录
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
-D69r-j=操作已取消 #string@42@
+D69r-j=操作已取消
 # ◆=file_backup_sj
-Cnrx1A=未指定需要备份的文件 #exiterr@182@
-CxzDe0=警告：未找到匹配 '$pattern' 的文件 #warning@193@
-CcmxLB=备份文件 $backup_file 已存在，跳过 #warning@205@
-AqMBPA=已创建备份: $src_file -> $backup_file #info@212@
-BgTRIj=错误：无法创建备份文件 $backup_file #error@215@
-DwtINR=重要文件无法备份 #exiterr@223@
-AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个 #info@225@
+Cnrx1A=未指定需要备份的文件
+CxzDe0=警告：未找到匹配 '$pattern' 的文件
+CcmxLB=备份文件 $backup_file 已存在，跳过
+AqMBPA=已创建备份: $src_file -> $backup_file
+BgTRIj=错误：无法创建备份文件 $backup_file
+DwtINR=重要文件无法备份
+AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}] #exiterr@37@
-AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}] #success@39@
+DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
+AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
 # ◆=clean_pkg_mgr
-CL3mF5=清理 {0} 缓存... #info@48@
-DeScsX=清理缓存失败 #exiterr@56@
+CL3mF5=清理 {0} 缓存...
+DeScsX=清理缓存失败
 # ◆=update_pkg_mgr
-DEw7FX=更新镜像源列表... #info@63@
-DuEpGS=更新失败，镜像可能不可用 #exiterr@70@
+DEw7FX=更新镜像源列表...
+DuEpGS=更新失败，镜像可能不可用
 # ◆=upgrade_pkg_mgr
-ATrBo6=升级软件包失败 #exiterr@84@
+ATrBo6=升级软件包失败
 # ◆=remove_pkg_mgr
-Ct4Xe-=删除依赖包失败 #exiterr@98@
+Ct4Xe-=删除依赖包失败
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
-BzOdCD=JSON format error #exiterr@42@
+BzOdCD=JSON format error
