--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -9,18 +9,198 @@
 
 # ■=bin/cmd_help.sh
 # ◆=show_help_info
-# ●=exiterr@215@2
-AQjaMp=Usage: show_help_info [command]\n \
-  Available commands: find, ls
-# ●=exiterr@220@
+# ●=exiterr@215
+AQjaMs=Usage: show_help_info [command]\n \
+        Available commands: find, ls   
+# ●=exiterr@220
 AYmVTH=Error: Command '$cmd' not found.
 # ◆=run_command
-# ●=exiterr@260@
+# ●=exiterr@260
 AD2VnV=未找到命令 '$cmd_name'
-# ●=exiterr@263@
+# ●=exiterr@263
 BUhmCh=未找到命令 '$cmd_name' 的元数据
 
 # ■=bin/deb/init_debian.sh
 # ◆=calc_fast_mirrors
-# ●=info@59@
+# ●=info@59
 C_dXMo=正在测试最快 {0} 镜像...
+
+# ■=bin/i18n.sh
+# ◆=load_lang_files
+# ●=info@33
+CBlfKf=查找可用语言...
+# ●=info@42
+CZ8NA1=找到语言: $lang_name ($lang_file)
+# ◆=resolve_lang_files
+# ●=string@70
+Azgqih=模式参数错误 {0}
+# ●=string@72
+Bh0G70={0} 语言文件已存在
+# ●=string@75
+BZGS0v={0} 语言文件不存在
+# ◆=add_lang_files
+# ●=string@134
+BXt0NX=# {0} 语言包，文档结构：\n\
+# 1. 自动处理 bin | lib 目录 sh 文件\n\
+# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 3. key=distinct hash code + position + order\n\
+# 4. value=localized string
+# ●=info@144
+BhqiSJ={0} 语言文件已创建
+# ◆=do_del_lang_files
+# ●=string@160
+BhsV54={0} 语言文件已删除
+# ◆=del_lang_files
+# ●=string@172
+DciPpK=确定要删除 {0} 语言文件吗?
+# ●=string@173
+CSSC4A=操作已取消，文件未删除
+# ◆=get_lang_files
+# ●=string@194
+DsK0EU=确定要新增 {0} 语言文件吗?
+# ●=exiterr@207
+AhUfgx=请先添加语言文件
+# ◆=get_shell_files
+# ●=warning@221
+Dyyi9n=警告: 脚本文件 '{0}' 不存在
+# ●=exiterr@231
+Dgt6EZ=没有找到任何 shell 脚本文件
+# ◆=upd_lang_files
+# ●=info@255
+DTAUgm=开始更新语言文件
+# ●=info@276
+DZ6eBX=语言文件更新完成
+# ◆=i18n_main
+# ●=exiterr@401
+CpRbj2=请输入语言参数，如 --lang={0}
+
+# ■=bin/init_base_func.sh
+# ◆=select_mirror
+# ●=exiterr@31
+ACDhWH=错误：镜像列表文件不存在
+# ●=exiterr@47
+CBS3sb=错误：未找到有效镜像URL
+# ●=success@50
+D77gSF=可用的镜像站：
+# ●=string@54
+APYiDP=请选择镜像编号 [{0}]: 
+# ●=string@62
+AT-5vC=输入{0}错误!{1}
+
+# ■=bin/init_main.sh
+# ◆=check_env
+# ●=info@72
+CV1zmD=test 123
+# ●=exiterr@78
+DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
+# ●=success@81
+CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
+# ●=exiterr@83
+DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
+# ●=info@88
+B096mN=[1/2] 检查用户语言环境...
+# ◆=check_dvd
+# ●=info@130
+CMQBXw===== 系统升级开始 ====
+# ●=success@135
+BKRWUB===== 系统升级完成 ====
+# ◆=config_sshd
+# ●=info@170
+DdYPtu=sshd 未安装，正在安装...
+# ●=exiterr@171
+A4g2Al=安装 sshd 失败
+# ●=string@176
+DM90xa=输入新的SSH端口 (当前: {0}) : 
+# ●=info@179
+DYcOAy=已设置SSH端口: {0}
+# ●=info@181
+CqfNuF=无效端口，保持默认: $curr_ssh_port
+# ●=info@187
+AQeuwP=已允许 root 登录
+# ●=info@188
+A2SYM5=已禁止 root 登录
+# ●=info@192
+CB81YF=SSH 配置已应用
+# ◆=handle_apt
+# ●=info@366
+DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
+# ●=success@374
+ACdFN5=已更新 sources.list
+# ●=info@376
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
+# ◆=handle_yum
+# ●=info@383
+Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源...
+# ●=success@394
+A5NqLZ=已更新 repo 文件
+# ●=info@396
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
+# ◆=handle_pacman
+# ●=info@403
+Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源...
+# ●=success@414
+DSD-_u=已更新 pacman.conf
+# ●=info@416
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
+# ◆=handle_zypper
+# ●=info@423
+BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
+# ●=success@434
+A5NqLZ=已更新 repo 文件
+# ●=info@436
+CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
+
+# ■=lib/ast_parser.sh
+# ◆=main
+# ●=exiterr@298
+C5kacU=用法: $0 <shell脚本或目录>
+# ●=error@310
+DX5jXO='$dir' 不是有效的文件或目录
+
+# ■=lib/bash_utils.sh
+# ◆=confirm_action
+# ●=string@42
+D69r-j=操作已取消
+# ◆=file_backup_sj
+# ●=exiterr@182
+Cnrx1A=未指定需要备份的文件
+# ●=warning@193
+CxzDe0=警告：未找到匹配 '$pattern' 的文件
+# ●=warning@205
+CcmxLB=备份文件 $backup_file 已存在，跳过
+# ●=info@212
+AqMBPA=已创建备份: $src_file -> $backup_file
+# ●=error@215
+BgTRIj=错误：无法创建备份文件 $backup_file
+# ●=exiterr@223
+DwtINR=重要文件无法备份
+# ●=info@225
+AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
+
+# ■=lib/cmd_handler.sh
+# ◆=install_base_pkg
+# ●=exiterr@37
+DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
+# ●=success@39
+AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
+# ◆=clean_pkg_mgr
+# ●=info@48
+CL3mF5=清理 {0} 缓存...
+# ●=exiterr@56
+DeScsX=清理缓存失败
+# ◆=update_pkg_mgr
+# ●=info@63
+DEw7FX=更新镜像源列表...
+# ●=exiterr@70
+DuEpGS=更新失败，镜像可能不可用
+# ◆=upgrade_pkg_mgr
+# ●=exiterr@84
+ATrBo6=升级软件包失败
+# ◆=remove_pkg_mgr
+# ●=exiterr@98
+Ct4Xe-=删除依赖包失败
+
+# ■=lib/json_handler.sh
+# ◆=fetch_options
+# ●=exiterr@42
+BzOdCD=JSON format error
