--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,8 +9,9 @@
 config:
   project: zoomIT-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-05-11 19:59:19'
+  changed: '2025-05-12 01:04:48'
   djb2_len: 20
+  djb2_coll: FILE # 目前仅在文件内处理hash冲突（暂未启用）
   del_mode: 2 # 0=保留；1=注释；2=删除
   trim_space: false # false=不处理；true=删除末尾空格
   lazy_load: false
@@ -26,14 +27,14 @@ config:
     python: py
   stats: # auto-generated, DO NOT UPDATE
     file_nos: 19
-    zh: {count: 73}
-    en: {count: 73}
+    zh: {count: 69}
+    en: {count: 69}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -41,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -49,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -57,7 +58,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
       zh: {count: 5, start: 53, end: 59}
       en: {count: 5, start: 53, end: 59}
@@ -65,39 +66,39 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 27, start: 61, end: 95}
-      en: {count: 27, start: 61, end: 95}
+      zh: {count: 23, start: 61, end: 91}
+      en: {count: 23, start: 61, end: 91}
   lib/ast_parser.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
-      zh: {count: 2, start: 97, end: 100}
-      en: {count: 2, start: 97, end: 100}
+      zh: {count: 2, start: 93, end: 96}
+      en: {count: 2, start: 93, end: 96}
   lib/bash_utils.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
-      zh: {count: 8, start: 102, end: 112}
-      en: {count: 8, start: 102, end: 112}
+      zh: {count: 8, start: 98, end: 108}
+      en: {count: 8, start: 98, end: 108}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
-      zh: {count: 8, start: 114, end: 127}
-      en: {count: 8, start: 114, end: 127}
+      zh: {count: 8, start: 110, end: 123}
+      en: {count: 8, start: 110, end: 123}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-11 19:59:19'
+    changed: '2025-05-12 01:04:50'
     stats:
-      zh: {count: 1, start: 129, end: 131}
-      en: {count: 1, start: 129, end: 131}
+      zh: {count: 1, start: 125, end: 127}
+      en: {count: 1, start: 125, end: 127}
