删除ast_parser.sh，其他代码微调

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -27,51 +27,51 @@ C_dXMo=正在测试最快 {0} 镜像...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-# ●=info@33
+# ●=info@32
 CBlfKf=查找可用语言...
-# ●=info@42
+# ●=info@41
 CZ8NA1=找到语言: $lang_name ($lang_file)
 # ◆=resolve_lang_files
-# ●=string@70
+# ●=string@69
 Azgqih=模式参数错误 {0}
-# ●=string@72
+# ●=string@71
 Bh0G70={0} 语言文件已存在
-# ●=string@75
+# ●=string@74
 BZGS0v={0} 语言文件不存在
 # ◆=add_lang_files
-# ●=string@134
+# ●=string@133
 BXt0NX=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
 # 2. 解析函数 string | info | exiterr | error | success | warning\n\
 # 3. key=distinct hash code + position + order\n\
 # 4. value=localized string
-# ●=info@144
+# ●=info@143
 BhqiSJ={0} 语言文件已创建
 # ◆=do_del_lang_files
-# ●=string@160
+# ●=string@159
 BhsV54={0} 语言文件已删除
 # ◆=del_lang_files
-# ●=string@172
+# ●=string@171
 DciPpK=确定要删除 {0} 语言文件吗?
-# ●=string@173
+# ●=string@172
 CSSC4A=操作已取消，文件未删除
 # ◆=get_lang_files
-# ●=string@194
+# ●=string@193
 DsK0EU=确定要新增 {0} 语言文件吗?
-# ●=exiterr@207
+# ●=exiterr@206
 AhUfgx=请先添加语言文件
 # ◆=get_shell_files
-# ●=warning@221
+# ●=warning@220
 Dyyi9n=警告: 脚本文件 '{0}' 不存在
-# ●=exiterr@231
+# ●=exiterr@230
 Dgt6EZ=没有找到任何 shell 脚本文件
 # ◆=upd_lang_files
-# ●=info@255
+# ●=info@254
 DTAUgm=开始更新语言文件
-# ●=info@276
+# ●=info@275
 DZ6eBX=语言文件更新完成
 # ◆=i18n_main
-# ●=exiterr@401
+# ●=exiterr@400
 CpRbj2=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_base_func.sh
@@ -89,64 +89,67 @@ AT-5vC=输入{0}错误!{1}
 
 # ■=bin/init_main.sh
 # ◆=check_env
-# ●=info@72
-CV1zmD=test 123
-# ●=exiterr@78
+# ●=info@70
+AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
+# ●=exiterr@75
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
-# ●=success@81
+# ●=success@78
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
-# ●=exiterr@83
+# ●=exiterr@80
 DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
-# ●=info@88
+# ●=info@85
 B096mN=[1/2] 检查用户语言环境...
 # ◆=check_dvd
-# ●=info@130
+# ●=info@127
 CMQBXw===== 系统升级开始 ====
-# ●=success@135
+# ●=success@132
 BKRWUB===== 系统升级完成 ====
 # ◆=config_sshd
-# ●=info@170
+# ●=info@167
 DdYPtu=sshd 未安装，正在安装...
-# ●=exiterr@171
+# ●=exiterr@168
 A4g2Al=安装 sshd 失败
-# ●=string@176
+# ●=string@173
 DM90xa=输入新的SSH端口 (当前: {0}) : 
-# ●=info@179
+# ●=info@176
 DYcOAy=已设置SSH端口: {0}
-# ●=info@181
+# ●=info@178
 CqfNuF=无效端口，保持默认: $curr_ssh_port
-# ●=info@187
+# ●=info@184
 AQeuwP=已允许 root 登录
-# ●=info@188
+# ●=info@185
 A2SYM5=已禁止 root 登录
-# ●=info@192
+# ●=info@189
 CB81YF=SSH 配置已应用
+# ◆=configure_ip
+# ●=info@210
+CCB-b2=检查网络设置...
 # ◆=handle_apt
-# ●=info@366
+# ●=info@386
 DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
-# ●=success@374
+# ●=success@394
 ACdFN5=已更新 sources.list
-# ●=info@376
+# ●=info@396
 CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
 # ◆=handle_yum
-# ●=info@383
+# ●=info@403
 Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源...
-# ●=success@394
+# ●=success@414
 A5NqLZ=已更新 repo 文件
 # ◆=handle_pacman
-# ●=info@403
+# ●=info@423
 Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源...
-# ●=success@414
+# ●=success@434
 DSD-_u=已更新 pacman.conf
 # ◆=handle_zypper
-# ●=info@423
+# ●=info@443
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
 
 # ■=lib/ast_parser.sh
 # ◆=main
-# ●=exiterr@298
+# ●=exiterr@97
 C5kacU=用法: $0 <shell脚本或目录>
-# ●=error@310
+# ●=error@109
 DX5jXO='$dir' 不是有效的文件或目录
 
 # ■=lib/bash_utils.sh
