--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -59,7 +59,7 @@ AT-5vC=输入{0}错误!{1}
 
 # ■=bin/init_main.sh
 # ◆=check_env
-CV1zmD=test 123
+AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
 DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
@@ -76,6 +76,8 @@ CqfNuF=无效端口，保持默认: $curr_ssh_port
 AQeuwP=已允许 root 登录
 A2SYM5=已禁止 root 登录
 CB81YF=SSH 配置已应用
+# ◆=configure_ip
+CCB-b2=检查网络设置...
 # ◆=handle_apt
 DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
 ACdFN5=已更新 sources.list
