重新生成（测试文件删除的场景）

--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -1,7 +1,7 @@
 # zh 语言包，文档结构：
-# 1. 自动处理 bin | lib 目录 py 文件
+# 1. 自动处理 bin | lib 目录 sh 文件
 # 2. 解析函数 string | info | exiterr | error | success | warning
-# 3. key=distinct hash code + position + order
+# 3. key=hash code of wording
 # 4. value=localized string
 
 # ■=bin/cmd_help.sh
@@ -90,11 +90,6 @@ Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源..
 DSD-_u=已更新 pacman.conf
 # ◆=handle_zypper
 BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
-
-# ■=lib/ast_parser.sh
-# ◆=main
-C5kacU=用法: $0 <shell脚本或目录>
-DX5jXO='$dir' 不是有效的文件或目录
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
