--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,11 +9,11 @@
 config:
   project: zoomIT-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-05-16 19:04:14'
+  changed: '2025-05-16 20:10:19'
   djb2_len: 20
-  djb2_coll: FILE # 目前仅在文件内处理hash冲突（暂未启用）
+  djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
-  trim_space: false # false=不处理；true=删除末尾空格
+  trim_space: false # false=不处理；true=删除末尾空格(消息去空格)
   lazy_load: false
   # add relative path here
   path_incl:
@@ -34,7 +34,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -58,7 +58,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 5, start: 53, end: 59}
       en: {count: 5, start: 53, end: 59}
@@ -66,7 +66,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 24, start: 61, end: 93}
       en: {count: 24, start: 61, end: 93}
@@ -74,7 +74,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 8, start: 95, end: 105}
       en: {count: 8, start: 95, end: 105}
@@ -82,7 +82,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 8, start: 107, end: 120}
       en: {count: 8, start: 107, end: 120}
@@ -90,7 +90,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 19:04:14'
+    changed: '2025-05-16 20:10:19'
     stats:
       zh: {count: 1, start: 122, end: 124}
       en: {count: 1, start: 122, end: 124}
