--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -88,7 +88,7 @@ APYiDP=请选择镜像编号 [{0}]:
 AT-5vC=输入{0}错误!{1}
 
 # ■=bin/init_main.sh
-# ◆=check_env
+# ◆=initial_env
 # ●=info@70
 AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
 # ●=exiterr@75
