--- a/config/lang/de.properties
+++ b/config/lang/de.properties
@@ -1,5 +1,5 @@
 # de 语言包，文档结构：
 # 1. 自动处理 bin | lib 目录 sh 文件
 # 2. 解析函数 string | info | exiterr | error | success | warning
-# 3. key=distinct hash code + position + order
+# 3. key=hash code of wording
 # 4. value=localized string
