--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -58,7 +58,7 @@ APYiDP=请选择镜像编号 [{0}]:
 AT-5vC=输入{0}错误!{1}
 
 # ■=bin/init_main.sh
-# ◆=check_env
+# ◆=initial_env
 AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
