--- a/config/lang/zh_CN.properties
+++ b/config/lang/zh_CN.properties
@@ -33,7 +33,7 @@ DZ6eBX=语言文件更新完成 #info@276@
 CpRbj2=请输入语言参数，如 --lang={0} #exiterr@401@
 
 # 3525264606=bin/init_main.sh
-#===check_env
+#===initial_env
 CV1zmD=test 123 #info@72@2
 DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号 #exiterr@78@
 CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo #success@81@
