实现shell文本自动翻译；正则bug修复；其他代码微调

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -14,8 +14,8 @@ AD2VnV=Command '$cmd_name' not fuond
 BUhmCh=Metadata for command '$cmd_name' not found
 
 # ■=bin/deb/init_debian.sh
-# ◆=calc_fast_mirrors
-C_dXMo=Testing fastest {0} mirror...
+# ◆=install_docker
+BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
@@ -49,24 +49,19 @@ DZ6eBX=Language file update complete
 # ◆=i18n_main
 CpRbj2=Enter language parameter, e.g. --lang={0}
 
-# ■=bin/init_base_func.sh
-# ◆=select_mirror
-ACDhWH=Error: Mirror list file does not exist
-CBS3sb=Error: No valid mirror URL found
-D77gSF=Available mirrors:
-APYiDP=请选择镜像编号 [{0}]:
-AT-5vC=输入{0}错误!{1}
-
 # ■=bin/init_main.sh
+# ◆=check_user_sudo
+C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
+A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
+# ◆=check_user_lang
+DpmB9o=User default language: $sys_lang
 # ◆=initial_env
-AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
-DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
-CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
-DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
-B096mN=[1/2] 检查用户语言环境...
-# ◆=check_dvd
-CMQBXw===== 系统升级开始 ====
-BKRWUB===== 系统升级完成 ====
+DVra9O=请手动修改软件源后再运行
+Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
+ATkylH=是否重新选择软件源？
+Dae856=[1/1] 系统升级开始...
+Cxby7M=[1/2] 系统升级完成...
+DsimAa=[1/3] 检查系统环境...
 # ◆=config_sshd
 DdYPtu=sshd 未安装，正在安装...
 A4g2Al=安装 sshd 失败
@@ -77,19 +72,17 @@ AQeuwP=已允许 root 登录
 A2SYM5=已禁止 root 登录
 CB81YF=SSH 配置已应用
 # ◆=configure_ip
-CCB-b2=检查网络设置...
-# ◆=handle_apt
-DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
-ACdFN5=已更新 sources.list
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
-# ◆=handle_yum
-Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源...
-A5NqLZ=已更新 repo 文件
-# ◆=handle_pacman
-Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源...
-DSD-_u=已更新 pacman.conf
-# ◆=handle_zypper
-BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
+A7KS7k=NetworkManager 正在运行
+DBvNSl=ifupdown 正在运行
+Bovkxu=wicked 正在运行
+ChTS8f=network-scripts 正在运行
+C1U5NZ=systemd-networkd 正在运行
+Dsf9VP=未知网络管理器，无法配置静态IP
+# ◆=install_docker
+BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+# ◆=init_main
+AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
+BOdVeV=Unable to detect Linux distribution, cannot proceed
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -105,6 +98,7 @@ AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
+BknPaZ=自动安装 '$lnx_cmd' ...
 DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
 AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
 # ◆=clean_pkg_mgr
@@ -114,10 +108,71 @@ DeScsX=清理缓存失败
 DEw7FX=更新镜像源列表...
 DuEpGS=更新失败，镜像可能不可用
 # ◆=upgrade_pkg_mgr
+DCx1UX=升级已安装的软件包...
 ATrBo6=升级软件包失败
 # ◆=remove_pkg_mgr
+DRQJ6X=删除不再需要的依赖包...
 Ct4Xe-=删除依赖包失败
+
+# ■=lib/docker.sh
+# ◆=show_notice
+B2PG-V=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
+# ◆=infra_setup
+DaFnjo=⏎ 选择完成，正在保存配置到 .env 文件...
+
+# ■=lib/init_base_func.sh
+# ◆=select_mirror
+ACDhWH=错误：镜像列表文件不存在
+CBS3sb=错误：未找到有效镜像URL
+D77gSF=可用的镜像站：
+DVxchr=请选择镜像编号 [{0}](0=不做选择):
+Dwt8Fb=已切换到: {0}
+AT-5vC=输入{0}错误!{1}
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 BzOdCD=JSON format error
+
+# ■=lib/msg_handler.sh
+# ◆=msg_parse_param
+B8f7ce=>&2
+
+# ■=lib/network.sh
+# ◆=need_fix_ip
+DhWnL_=${ENV_NETWORK[
+BYrgld=用户选择不修改网络配置
+# ◆=count_down
+DbQGoY=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+# ◆=config_nmcli
+A3rBaJ=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+D4nmbp=连接激活失败，请检查网络并尝试重新连接
+# ◆=config_default
+BcsNsm=错误：systemd-networkd 未安装或不可用
+A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
+
+# ■=lib/python_install.sh
+# ◆=detect_system
+BBpAzp=不支持的架构: $arch
+# ◆=get_python_url
+CMgnrL=不支持的系统类型: $system_type
+# ◆=install_python_standalone
+DG123W=下载 Python $PY_VERSION standalone...
+DbCVDA=下载地址: $python_url
+AKcE5q=安装 Python 到 $PY_INST_DIR...
+DVgind=解压安装失败
+AaYzRa=Python $PY_VERSION 安装完成！
+# ◆=verify_python
+De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
+C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
+DrRJIO=Python 验证成功: $inst_version
+# ◆=create_venv_with_packages
+CIZVGH=跳过虚拟环境创建
+C0cbAj=创建虚拟环境 $VENV_DIR...
+A1hmje=虚拟环境创建成功！
+AI3S2j=创建虚拟环境失败
+# ◆=main
+AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
+
+# ■=lib/source_install.sh
+# ◆=main
+AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
