--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -21,9 +21,9 @@ AD2VnV=未找到命令 '$cmd_name'
 BUhmCh=未找到命令 '$cmd_name' 的元数据
 
 # ■=bin/deb/init_debian.sh
-# ◆=calc_fast_mirrors
-# ●=info@59
-C_dXMo=正在测试最快 {0} 镜像...
+# ◆=install_docker
+# ●=info@36
+BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
@@ -74,76 +74,66 @@ DZ6eBX=语言文件更新完成
 # ●=exiterr@400
 CpRbj2=请输入语言参数，如 --lang={0}
 
-# ■=bin/init_base_func.sh
-# ◆=select_mirror
-# ●=exiterr@31
-ACDhWH=错误：镜像列表文件不存在
-# ●=exiterr@47
-CBS3sb=错误：未找到有效镜像URL
-# ●=success@50
-D77gSF=可用的镜像站：
-# ●=string@54
-APYiDP=请选择镜像编号 [{0}]: 
-# ●=string@62
-AT-5vC=输入{0}错误!{1}
-
 # ■=bin/init_main.sh
+# ◆=check_user_sudo
+# ●=exiterr@40
+C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
+# ●=exiterr@42
+A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
+# ◆=check_user_lang
+# ●=info@208
+DpmB9o=User default language: $SYS_LANG
 # ◆=initial_env
-# ●=info@70
-AFBOY7=[1/1] 检查用户权限...{0}{1}{0}
-# ●=exiterr@75
-DO864E=无法以非 root 安装 sudo，请联系管理员或使用 root 账号
-# ●=success@78
-CR8kDJ=sudo 权限验证成功，后续命令自动使用 sudo
-# ●=exiterr@80
-DRoOjL=当前用户没有足够的 sudo 权限，无法继续执行
-# ●=info@85
-B096mN=[1/2] 检查用户语言环境...
-# ◆=check_dvd
-# ●=info@127
-CMQBXw===== 系统升级开始 ====
-# ●=success@132
-BKRWUB===== 系统升级完成 ====
+# ●=exiterr@232
+DVra9O=请手动修改软件源后再运行
+# ●=string@238
+Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
+# ●=string@241
+ATkylH=是否重新选择软件源？
+# ●=info@261
+Dae856=[1/1] 系统升级开始...
+# ●=success@266
+Cxby7M=[1/2] 系统升级完成...
+# ●=info@269
+DsimAa=[1/3] 检查系统环境...
 # ◆=config_sshd
-# ●=info@167
+# ●=info@292
 DdYPtu=sshd 未安装，正在安装...
-# ●=exiterr@168
+# ●=exiterr@293
 A4g2Al=安装 sshd 失败
-# ●=string@173
+# ●=string@298
 DM90xa=输入新的SSH端口 (当前: {0}) : 
-# ●=info@176
+# ●=info@301
 DYcOAy=已设置SSH端口: {0}
-# ●=info@178
+# ●=info@303
 CqfNuF=无效端口，保持默认: $curr_ssh_port
-# ●=info@184
+# ●=info@310
 AQeuwP=已允许 root 登录
-# ●=info@185
+# ●=info@311
 A2SYM5=已禁止 root 登录
-# ●=info@189
+# ●=info@315
 CB81YF=SSH 配置已应用
 # ◆=configure_ip
-# ●=info@210
-CCB-b2=检查网络设置...
-# ◆=handle_apt
-# ●=info@386
-DRXRpw=检测到 CD-ROM 作为软件源，正在修改为默认 Debian/Ubuntu 官方源...
-# ●=success@394
-ACdFN5=已更新 sources.list
-# ●=info@396
-CBvp-a=未检测到 CD-ROM 作为软件源，无需修改。
-# ◆=handle_yum
-# ●=info@403
-Dg3YVw=检测到 CD-ROM 作为软件源，正在修改为默认 CentOS/RHEL 官方源...
-# ●=success@414
-A5NqLZ=已更新 repo 文件
-# ◆=handle_pacman
-# ●=info@423
-Cpsrh2=检测到 CD-ROM 作为软件源，正在修改为默认 Arch 官方源...
-# ●=success@434
-DSD-_u=已更新 pacman.conf
-# ◆=handle_zypper
-# ●=info@443
-BxcAM_=检测到 CD-ROM 作为软件源，正在修改为默认 OpenSUSE 官方源...
+# ●=info@327
+A7KS7k=NetworkManager 正在运行
+# ●=info@330
+DBvNSl=ifupdown 正在运行
+# ●=info@333
+Bovkxu=wicked 正在运行
+# ●=info@336
+ChTS8f=network-scripts 正在运行
+# ●=info@339
+C1U5NZ=systemd-networkd 正在运行
+# ●=exiterr@342
+Dsf9VP=未知网络管理器，无法配置静态IP
+# ◆=install_docker
+# ●=info@348
+BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+# ◆=init_main
+# ●=exiterr@423
+AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
+# ●=exiterr@427
+BOdVeV=Unable to detect Linux distribution, cannot proceed
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -167,28 +157,125 @@ AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-# ●=exiterr@37
+# ●=info@20
+BknPaZ=自动安装 '$lnx_cmd' ...
+# ●=exiterr@35
 DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
-# ●=success@39
+# ●=success@37
 AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
 # ◆=clean_pkg_mgr
-# ●=info@48
+# ●=info@46
 CL3mF5=清理 {0} 缓存...
-# ●=exiterr@56
+# ●=exiterr@54
 DeScsX=清理缓存失败
 # ◆=update_pkg_mgr
-# ●=info@63
+# ●=info@61
 DEw7FX=更新镜像源列表...
-# ●=exiterr@70
+# ●=exiterr@68
 DuEpGS=更新失败，镜像可能不可用
 # ◆=upgrade_pkg_mgr
-# ●=exiterr@84
+# ●=info@75
+DCx1UX=升级已安装的软件包...
+# ●=exiterr@82
 ATrBo6=升级软件包失败
 # ◆=remove_pkg_mgr
-# ●=exiterr@98
+# ●=info@89
+DRQJ6X=删除不再需要的依赖包...
+# ●=exiterr@96
 Ct4Xe-=删除依赖包失败
+
+# ■=lib/docker.sh
+# ◆=show_notice
+# ●=string@22
+B2PG-V=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
+# ◆=infra_setup
+# ●=info@154
+DaFnjo=⏎ 选择完成，正在保存配置到 .env 文件...
+
+# ■=lib/init_base_func.sh
+# ◆=select_mirror
+# ●=exiterr@34
+ACDhWH=错误：镜像列表文件不存在
+# ●=exiterr@50
+CBS3sb=错误：未找到有效镜像URL
+# ●=success@53
+D77gSF=可用的镜像站：
+# ●=string@57
+DVxchr=请选择镜像编号 [{0}](0=不做选择): 
+# ●=success@69
+Dwt8Fb=已切换到: {0}
+# ●=string@73
+AT-5vC=输入{0}错误!{1}
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
-# ●=exiterr@42
+# ●=exiterr@40
 BzOdCD=JSON format error
+
+# ■=lib/msg_handler.sh
+# ◆=msg_parse_param
+# ●=error]:@492
+B8f7ce=>&2
+
+# ■=lib/network.sh
+# ◆=need_fix_ip
+# ●=info@24
+DhWnL_=${ENV_NETWORK[
+# ●=info@39
+BYrgld=用户选择不修改网络配置
+# ◆=count_down
+# ●=info@91
+DbQGoY=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+# ◆=config_nmcli
+# ●=exiterr@106
+A3rBaJ=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+# ●=exiterr@132
+D4nmbp=连接激活失败，请检查网络并尝试重新连接
+# ◆=config_default
+# ●=exiterr@214
+BcsNsm=错误：systemd-networkd 未安装或不可用
+# ●=exiterr@222
+A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
+
+# ■=lib/python_install.sh
+# ◆=detect_system
+# ●=exiterr@59
+BBpAzp=不支持的架构: $arch
+# ◆=get_python_url
+# ●=exiterr@78
+CMgnrL=不支持的系统类型: $system_type
+# ◆=install_python_standalone
+# ●=info@102
+DG123W=下载 Python $PY_VERSION standalone...
+# ●=info@103
+DbCVDA=下载地址: $python_url
+# ●=info@111
+AKcE5q=安装 Python 到 $PY_INST_DIR...
+# ●=exiterr@114
+DVgind=解压安装失败
+# ●=info@119
+AaYzRa=Python $PY_VERSION 安装完成！
+# ◆=verify_python
+# ●=exiterr@127
+De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
+# ●=exiterr@132
+C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
+# ●=info@135
+DrRJIO=Python 验证成功: $inst_version
+# ◆=create_venv_with_packages
+# ●=warning@148
+CIZVGH=跳过虚拟环境创建
+# ●=info@153
+C0cbAj=创建虚拟环境 $VENV_DIR...
+# ●=success@159
+A1hmje=虚拟环境创建成功！
+# ●=exiterr@161
+AI3S2j=创建虚拟环境失败
+# ◆=main
+# ●=info@196
+AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
+
+# ■=lib/source_install.sh
+# ◆=main
+# ●=info@183
+AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
