--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -7,9 +7,9 @@
 
 # 全局配置
 config:
-  project: zoomIT-2025
+  project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-05-16 20:10:19'
+  changed: '2025-06-12 23:45:22'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -26,15 +26,15 @@ config:
     shell: sh
     python: py
   stats: # auto-generated, DO NOT UPDATE
-    file_nos: 18
-    zh: {count: 68}
-    en: {count: 68}
+    file_nos: 23
+    zh: {count: 100}
+    en: {count: 100}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,47 +50,87 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
-  bin/init_base_func.sh:
-    type: shell
-    djb2_len: 20
-    created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 20:10:19'
-    stats:
-      zh: {count: 5, start: 53, end: 59}
-      en: {count: 5, start: 53, end: 59}
   bin/init_main.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 24, start: 61, end: 93}
-      en: {count: 24, start: 61, end: 93}
+      zh: {count: 26, start: 53, end: 86}
+      en: {count: 26, start: 53, end: 86}
   lib/bash_utils.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats:
-      zh: {count: 8, start: 95, end: 105}
-      en: {count: 8, start: 95, end: 105}
+      zh: {count: 8, start: 88, end: 98}
+      en: {count: 8, start: 88, end: 98}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats:
-      zh: {count: 8, start: 107, end: 120}
-      en: {count: 8, start: 107, end: 120}
+      zh: {count: 11, start: 100, end: 116}
+      en: {count: 11, start: 100, end: 116}
+  lib/docker.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 2, start: 118, end: 122}
+      en: {count: 2, start: 118, end: 122}
+  lib/init_base_func.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 6, start: 124, end: 131}
+      en: {count: 6, start: 124, end: 131}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-05-16 20:10:19'
+    changed: '2025-06-12 23:45:22'
     stats:
-      zh: {count: 1, start: 122, end: 124}
-      en: {count: 1, start: 122, end: 124}
+      zh: {count: 1, start: 133, end: 135}
+      en: {count: 1, start: 133, end: 135}
+  lib/msg_handler.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 1, start: 137, end: 139}
+      en: {count: 1, start: 137, end: 139}
+  lib/network.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 7, start: 141, end: 152}
+      en: {count: 7, start: 141, end: 152}
+  lib/python_install.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 15, start: 154, end: 175}
+      en: {count: 15, start: 154, end: 175}
+  lib/source_install.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-06-12 18:10:50'
+    changed: '2025-06-12 23:45:22'
+    stats:
+      zh: {count: 1, start: 177, end: 179}
+      en: {count: 1, start: 177, end: 179}
