合并语言处理逻辑到 lang_utils.sh；函数名调整

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -80,7 +80,7 @@ CpRbj2=请输入语言参数，如 --lang={0}
 C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
 # ●=exiterr@42
 A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
-# ◆=check_user_lang
+# ◆=reset_user_lang
 # ●=info@208
 DpmB9o=User default language: $SYS_LANG
 # ◆=initial_env
@@ -244,7 +244,7 @@ BBpAzp=不支持的架构: $arch
 # ◆=get_python_url
 # ●=exiterr@78
 CMgnrL=不支持的系统类型: $system_type
-# ◆=install_python_standalone
+# ◆=install_py_standalone
 # ●=info@102
 DG123W=下载 Python $PY_VERSION standalone...
 # ●=info@103
@@ -262,7 +262,7 @@ De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
 C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
 # ●=info@135
 DrRJIO=Python 验证成功: $inst_version
-# ◆=create_venv_with_packages
+# ◆=create_py_venv
 # ●=warning@148
 CIZVGH=跳过虚拟环境创建
 # ●=info@153
