--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -53,7 +53,7 @@ CpRbj2=Enter language parameter, e.g. --lang={0}
 # ◆=check_user_sudo
 C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
 A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
-# ◆=check_user_lang
+# ◆=reset_user_lang
 DpmB9o=User default language: $sys_lang
 # ◆=initial_env
 DVra9O=请手动修改软件源后再运行
@@ -155,7 +155,7 @@ A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
 BBpAzp=不支持的架构: $arch
 # ◆=get_python_url
 CMgnrL=不支持的系统类型: $system_type
-# ◆=install_python_standalone
+# ◆=install_py_standalone
 DG123W=下载 Python $PY_VERSION standalone...
 DbCVDA=下载地址: $python_url
 AKcE5q=安装 Python 到 $PY_INST_DIR...
@@ -165,7 +165,7 @@ AaYzRa=Python $PY_VERSION 安装完成！
 De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
 C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
 DrRJIO=Python 验证成功: $inst_version
-# ◆=create_venv_with_packages
+# ◆=create_py_venv
 CIZVGH=跳过虚拟环境创建
 C0cbAj=创建虚拟环境 $VENV_DIR...
 A1hmje=虚拟环境创建成功！
