--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -155,7 +155,7 @@ A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
 BBpAzp=不支持的架构: $arch
 # ◆=get_python_url
 CMgnrL=不支持的系统类型: $system_type
-# ◆=install_py_standalone
+# ◆=install_python_standalone
 DG123W=下载 Python $PY_VERSION standalone...
 DbCVDA=下载地址: $python_url
 AKcE5q=安装 Python 到 $PY_INST_DIR...
@@ -165,7 +165,7 @@ AaYzRa=Python $PY_VERSION 安装完成！
 De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
 C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
 DrRJIO=Python 验证成功: $inst_version
-# ◆=create_py_venv
+# ◆=create_venv
 CIZVGH=跳过虚拟环境创建
 C0cbAj=创建虚拟环境 $VENV_DIR...
 A1hmje=虚拟环境创建成功！
